# athost

./: Cargo.toml  README.md  TODO.md
athost/: Cargo.toml
athost/src/: main.rs
athost_identity/: Cargo.toml
athost_identity/src/: lib.rs
lexicons/org/athost/actor/: defs.json  profile.json
lexicons/org/athost/feed/: comment.json  defs.json  like.json  post.json
src/identity/: did.rs
