[package]
name = "athost"
version = "0.0.1"
authors = ["Eric Hamilton <etj2206@rit.edu>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde_json = "1.0"
url = "2.4"
ciborium = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
