[package]
name = "athost"
version = "0.0.1"
edition = "2024"

[dependencies]
athost_identity = { path = "../athost_identity" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde_json = "1.0"
url = "2.4"
ciborium = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
# tokio + native-tls
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls" ] }
